# sablier-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  deploy_staging.sh  pyproject.toml  server.json
.github/workflows/: ci.yml
src/sablier_mcp/: __init__.py  auth.py  client.py  server.py
