[project]
name = "sablier-mcp"
version = "0.1.0"
description = "MCP server for Sablier — AI-powered regime-dependent factor modeling and portfolio analytics"
requires-python = ">=3.11"
dependencies = [
    "mcp-use>=0.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sablier-mcp = "sablier_mcp.server:main"
