[project]
name = "sablier-mcp"
version = "0.1.0"
description = "Sablier MCP — plug Wall Street-grade portfolio analytics, stress-testing, and SEC filing intelligence into any AI assistant. What takes quants & analysts weeks, done in 2 minutes."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sablier-mcp = "sablier_mcp.server:main"
